--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/taibuharoub/scalable-img-upload-/issues"
   },
-  "homepage": "https://github.com/taibuharoub/scalable-img-upload-#readme"
+  "homepage": "https://github.com/taibuharoub/scalable-img-upload-#readme",
+  "dependencies": {
+    "aws-sdk": "^2.958.0",
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "uuid": "^8.3.2"
+  }
 }
