--- a/Google-Cloud/package.json
+++ b/Google-Cloud/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "@google-cloud/storage": "^5.11.1",
+    "dotenv": "^10.0.0",
+    "mongoose": "^5.13.5",
+    "uuid": "^8.3.2"
   }
 }
